LX-2435 - rework layout endpoint, v2